Terminado corpo da pagina

--- a/index.html
+++ b/index.html
@@ -15,7 +15,22 @@
   </head>
   <body>
     <main>
-      <div></div>
+      <div class="screen1 ">
+        <h1>Qual é sua sorte de hoje?</h1>
+        <p>Abra o biscoito e descubra</p>
+
+        <div id="fortuneCookie"></div>
+      </div>
+
+      <div class="screen2 hide">
+        <h1>Aqui está sua sorte de hoje:</h1>
+        <h2>Essa é sua sorte</h2>
+
+        <div id="crackedCookie"></div>
+        <button id="tryAgain">Abrir outro biscoito</button>
+        
+      </div>
     </main>
+    <script src="main.js"></script>
   </body>
 </html>
